--- a/Assets/WebGLTemplates/AgoraTemplate2020/TemplateData/style.css
+++ b/Assets/WebGLTemplates/AgoraTemplate2020/TemplateData/style.css
@@ -14,3 +14,5 @@ body { padding: 0; margin: 0 }
 #unity-build-title { float: right; margin-right: 10px; line-height: 38px; font-family: arial; font-size: 18px }
 #unity-fullscreen-button { float: right; width: 38px; height: 38px; background: url('fullscreen-button.png') no-repeat center }
 #unity-mobile-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display: none }
+#unity-links { line-height: 38px; font-family: arial; font-size: 22px }
+p.center { text-align: center; }
